refactor: 코드 리팩토링 및 스웨거 보완